rewrite Test